test/extern/diten/externVoidFnWithArray.good
externVoidFnWithArray.chpl:8: error: illegal use of function that does not return a value: 'voidWithArray'
